# agentpipe

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  main.rs  render.rs
crates/engine/: Cargo.toml
crates/engine/examples/: mock_acp_agent.rs
crates/engine/src/: audit.rs  context.rs  control.rs  error.rs  executor.rs  lib.rs  manifest.rs  protocol.rs  worktree.rs
crates/engine/src/runner/: acp.rs  claude.rs  codex.rs  mod.rs
crates/engine/tests/: acp_runner.rs  acp_smoke.rs  claude_runner_test.rs  codex_runner_test.rs  context_test.rs  control_test.rs  executor_test.rs  manifest_test.rs  protocol_serde_test.rs
demo/: agentpipe.tape  demo-task.yaml  stub-claude.sh  stub-codex.sh
docs/: 2026-06-25-experiment-report.md
docs/plans/: 2026-06-16-agentpipe-engine.md  2026-06-16-phase1b-gui.md  2026-06-17-step-progress-streaming.md  2026-06-17-verify-gate.md  2026-06-18-command-verify-gate.md  2026-06-18-gui-completion.md  2026-06-18-run-persistence-audit.md  2026-06-25-acp-integration.md  2026-06-25-open-source-prep.md  2026-06-26-review-loop-budget-and-verdict.md
docs/research/: 2026-06-18-build-vs-adopt-ccswarm.md  2026-06-18-ccswarm-conductor-comparison.md
docs/specs/: 2026-06-16-design.md  2026-06-16-phase1b-gui-design.md  2026-06-17-step-progress-streaming-design.md  2026-06-17-verify-gate-design.md  2026-06-18-command-verify-gate-design.md  2026-06-18-gui-completion-design.md  2026-06-18-project-grouping-design.md  2026-06-18-run-persistence-audit-design.md  2026-06-18-step-output-expand-design.md  2026-06-18-worktree-isolation-design.md  2026-06-20-multi-agent-orchestration-design.md  (+6 more)
src-tauri/: Cargo.toml  Test01  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  commands.rs  main.rs  paths.rs  shellpath.rs  state.rs
templates/: codex-gate-only.yaml  full-pipeline.yaml  mr-review-loop.yaml
ui/: index.html  package-lock.json  package.json
(+34 files in other folders)
