[package]
name = "agentpipe-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI for AgentPipe — a cross-vendor adversarial review pipeline for AI coding agents."
repository = "https://github.com/Xiaofuziod/agentpipe"

[[bin]]
name = "agentpipe"
path = "src/main.rs"

[dependencies]
agentpipe-engine = { path = "../engine" }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
serde_json = "1"
