[package]
name = "agentpipe-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cross-vendor adversarial review pipeline engine for AI coding CLIs (Claude, Codex)."
repository = "https://github.com/Xiaofuziod/agentpipe"

[dependencies]
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1"
thiserror = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
